# metrics-library

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  libigdml.pc.in  libml.pc.in  ml_cmake_adapter.cmake
inc/common/instrumentation/api/: metrics_library_api_1_0.h
instrumentation/metrics_library/: .clang-format
instrumentation/metrics_library/codegen/ddi/: ml_ddi_command_buffer.cpp  ml_ddi_configuration.cpp  ml_ddi_context.cpp  ml_ddi_marker.cpp  ml_ddi_override.cpp  ml_ddi_query.cpp  ml_ddi_report.cpp
instrumentation/metrics_library/codegen/ddi/inc/: ml_ddi.h  ml_ddi_gen11.h  ml_ddi_gen12.h  ml_ddi_gen9.h  ml_ddi_xe2_hpg.h  ml_ddi_xe3.h  ml_ddi_xe3p.h  ml_ddi_xe_hp.h  ml_ddi_xe_hpc.h  ml_ddi_xe_hpg.h  ml_ddi_xe_lp.h
instrumentation/metrics_library/codegen/gpu/: ml_gpu_commands_gen11.h  ml_gpu_commands_gen12.h  ml_gpu_commands_gen9.h  ml_gpu_commands_include.h  ml_gpu_commands_xe2_hpg.h  ml_gpu_commands_xe3.h  ml_gpu_commands_xe3p.h  ml_gpu_commands_xe_hp.h  ml_gpu_commands_xe_hpc.h  ml_gpu_commands_xe_hpg.h  ml_gpu_commands_xe_lp.h
instrumentation/metrics_library/codegen/traits/: ml_debug_helper.h  ml_traits_gen11.h  ml_traits_gen12.h  ml_traits_gen9.h  ml_traits_include.h  ml_traits_xe2_hpg.h  ml_traits_xe3.h  ml_traits_xe3p.h  ml_traits_xe_hp.h  ml_traits_xe_hpc.h  ml_traits_xe_hpg.h  ml_traits_xe_lp.h
instrumentation/metrics_library/codegen/traits/linux/: ml_debug_helper.h
instrumentation/metrics_library/ddi/: ml_ddi_command_buffer.hpp  ml_ddi_configuration.hpp  ml_ddi_context.hpp  ml_ddi_marker.hpp  ml_ddi_override.hpp  ml_ddi_query.hpp  ml_ddi_report.hpp
instrumentation/metrics_library/traits/command_buffer/: ml_gpu_command_buffer.h  ml_gpu_commands.h  ml_gpu_registers.h  ml_gpu_registers_layouts.h
instrumentation/metrics_library/traits/configuration/: ml_configuration_hw_counters_user.h  ml_configuration_layouts.h
instrumentation/metrics_library/traits/configuration/linux/: ml_configuration_hw_counters_oa.h
instrumentation/metrics_library/traits/constants/: ml_constants.h
instrumentation/metrics_library/traits/constants/linux/: ml_constants_os.h
instrumentation/metrics_library/traits/context/: ml_client_options.h  ml_context.h  ml_state.h
instrumentation/metrics_library/traits/device/: ml_sub_device_common.h
instrumentation/metrics_library/traits/device/linux/: ml_sub_device.h
instrumentation/metrics_library/traits/example/: ml_example.h  ml_example_gen.h  ml_example_gpu.h
instrumentation/metrics_library/traits/function_log/: ml_function_log.h  ml_function_log_common.h  ml_function_log_release.h
instrumentation/metrics_library/traits/internal/: ml_internal_feature.h
instrumentation/metrics_library/traits/kernel_interface/linux/: ml_drm_layouts.h  ml_io_control.h  ml_io_control_layouts.h  ml_kernel_interface.h  ml_tbs_interface.h  ml_tbs_stream.h
instrumentation/metrics_library/traits/marker/: ml_marker_stream_user.h
instrumentation/metrics_library/traits/marker/linux/: ml_marker_stream_user_extended.h
instrumentation/metrics_library/traits/oa_buffer/: ml_oa_buffer_dummy.h  ml_oa_buffer_layouts.h  ml_oa_buffer_mapped.h  ml_oa_buffer_tbs.h  ml_oa_buffer_tbs_container.h
instrumentation/metrics_library/traits/object/: ml_ddi_objects.h  ml_object.h
instrumentation/metrics_library/traits/override/: ml_override_flush_caches.h  ml_override_null_hardware.h
instrumentation/metrics_library/traits/override/linux/: ml_override_layouts.h  ml_override_null_hardware.h  ml_override_posh_query.h  ml_override_user.h
instrumentation/metrics_library/traits/policy/linux/: ml_policy_oneapi.h  ml_policy_opencl.h
instrumentation/metrics_library/traits/query/: ml_hw_counters_layouts.h  ml_pipeline_timestamps_layouts.h  ml_query_hw_counters.h  ml_query_hw_counters_calculator.h  ml_query_hw_counters_slot.h  ml_query_pipeline_timestamps.h
instrumentation/metrics_library/traits/query/linux/: ml_query_hw_counters_policy_oneapi.h  ml_query_hw_counters_policy_opencl.h
instrumentation/metrics_library/traits/tools/: ml_tools.h
instrumentation/metrics_library/traits/tools/linux/: ml_tools_os.h
instrumentation/utils/common/: iu_debug.c
instrumentation/utils/common/inc/: iu_debug.h  iu_std.h
instrumentation/utils/linux/: iu_os.cpp  iu_std.cpp
instrumentation/utils/linux/inc/: iu_i915_perf.h  iu_os.h
